<resources>
    <string name="app_name">My Contacts</string>
    <string name="submit">SUBMIT</string>
    <string name="contacts">Contacts</string>
    <string name="forgot_password_reset_here">Forgot Password? Reset Here</string>
    <string name="login">Login</string>
    <string name="list_of_contacts">LIST OF CONTACTS</string>
    <string name="create_contact">CREATE CONTACT</string>
    <string name="please_enter_contact_email">please enter contact email</string>
    <string name="please_enter_contact_number">please enter contact number</string>
    <string name="please_enter_contact_name">please enter contact name</string>
    <string name="register">Register</string>
    <string name="please_re_enter_password">please re-enter password</string>
    <string name="please_enter_your_password">please enter your password</string>
    <string name="please_enter_your_email_address">please enter your email address</string>
    <string name="please_enter_your_name">please enter your name</string>
    <string name="loading_please_wait">Loading...please wait...</string>
    <string name="a">A</string>
    <string name="textview">TextView</string>
</resources>